[package]
name = "todo-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = "0.66.0"
tokio = {version = "1.36.0", features = ["full"]}
reqwest = "0.11"
serde = "1.0.196"
serde_json = "1.0.113"
tokio-postgres = "0.7.9"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls"] }
once_cell = "1.19.0"